--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
+event.feign.url=${EVENT_SERVICE_URL:http://localhost:7070}
+
+
 #server.port=7000
 #spring.datasource.url= jdbc:postgresql://localhost:5432/food_options_ms
 #spring.datasource.username= postgres
